--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "apexcharts": "^3.22.3",
     "axios": "^0.21.0",
     "moment": "^2.29.1",
     "next": "10.0.3",
     "react": "17.0.1",
+    "react-apexcharts": "^1.3.7",
+    "react-countup": "^4.3.3",
     "react-dom": "17.0.1",
+    "react-number-format": "^4.4.1",
     "react-redux": "^7.2.2",
     "react-top-loading-bar": "^2.0.1",
     "redux": "^4.0.5",
